Changes to upcoming releases

--- a/current.html
+++ b/current.html
@@ -37,10 +37,139 @@
             <a href="#">testimonials</a>
         </div>
         <div class="subheader-container">
-            <h2 class="subheader">Current Releases</h2>
+            <h2 class="subheader">Upcoming Releases</h2>
             <hr class="subheader-line">
         </div>
-        <div class="image-grid">
+        <div class="releases-list">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Release Date</th>
+                        <th>Artist</th>
+                        <th>Album Title</th>
+                        <th>Label</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/1.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">2nd Grade</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/2.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">7ebra</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/3.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">All Things Blue</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/4.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/5.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/6.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/7.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/8.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="subheader-container">
+            <h2 class="subheader">Recent Releases</h2>
+            <hr class="subheader-line">
+        </div>
+        <div class="releases-list">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Release Date</th>
+                        <th>Artist</th>
+                        <th>Album Title</th>
+                        <th>Label</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/9.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/10.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/11.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/12.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/13.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/14.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/15.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="artist.html"><img src="img/artists/16.png" class="album-art"> <span>May 27, 2023</span></a></td>
+                        <td><a href="artist.html">Artist Name</a></td>
+                        <td><a href="artist.html">Album Title</a></td>
+                        <td><a href="artist.html">Label Name</a></td>
+                    </tr>
+                    <!-- Repeat for remaining releases -->
+                </tbody>
+            </table>
+        </div>
+        <!-- <div class="image-grid">
             <div class="image-container">
                 <div class="artist-container">
                     <h3>May 27, 2023</h3>
@@ -154,7 +283,7 @@
                 </div>
             </div>
             <!-- Repeat for remaining images -->
-        </div>
+    </div> -->
     </div>
     <footer>
         <div class="footer-main">
