Added missing pages

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
             <a href="current.html">Current Releases</a>
             <a href="roster.html">Roster</a>
             <a class="active" href="about.html">About Us</a>
-            <a href="#">Work With Us</a>
-            <a href="#">Testimonials</a>
+            <a href="workwithus.html">work with us</a>
+            <a href="testimonials.html">testimonials</a>
             <div class="close-button"><img src="img/close.png" alt="Close menu"></div>
         </nav>
         <div class="hamburger-button"><img src="img/hamburder.png" alt="Hamburger Menu"></div>
@@ -33,8 +33,8 @@
             <a href="current.html">current releases</a>
             <a href="roster.html">roster</a>
             <a class="active" href="about.html">about us</a>
-            <a href="#">work with us</a>
-            <a href="#">testimonials</a>
+            <a href="workwithus.html">work with us</a>
+            <a href="testimonials.html">testimonials</a>
         </div>
         <div class="subheader-container">
             <h2 class="subheader">about us</h2>
