--- a/current.html
+++ b/current.html
@@ -17,8 +17,8 @@
             <a href="current.html" class="active">current releases</a>
             <a href="roster.html">roster</a>
             <a href="about.html">about us</a>
-            <a href="#">work with us</a>
-            <a href="#">testimonials</a>
+            <a href="workwithus.html">work with us</a>
+            <a href="testimonials.html">testimonials</a>
             <div class="close-button"><img src="img/close.png" alt="close menu"></div>
         </nav>
         <div class="hamburger-button"><img src="img/hamburder.png" alt="Hamburger Menu"></div>
@@ -33,8 +33,8 @@
             <a class="active" href="#">current releases</a>
             <a href="roster.html">roster</a>
             <a href="about.html">about us</a>
-            <a href="#">work with us</a>
-            <a href="#">testimonials</a>
+            <a href="workwithus.html">work with us</a>
+            <a href="testimonials.html">testimonials</a>
         </div>
         <div class="subheader-container">
             <h2 class="subheader">Upcoming Releases</h2>
